src/test/ui/mismatched_types/suggest-boxed-trait-objects-instead-of-impl-trait.stderr
error[E0308]: `if` and `else` have incompatible types
  --> $DIR/suggest-boxed-trait-objects-instead-of-impl-trait.rs:17:9
   |
LL | /     if true {
LL | |         S
   | |         - expected because of this
LL | |     } else {
LL | |         Y
   | |         ^ expected struct `S`, found struct `Y`
LL | |     }
   | |_____- `if` and `else` have incompatible types
   |
help: you could change the return type to be a boxed trait object
   |
LL | fn baz() -> Box<dyn Trait> {
   |             ~~~~~~~      +
help: if you change the return type to expect trait objects, box the returned expressions
   |
LL ~         Box::new(S)
LL |     } else {
LL ~         Box::new(Y)
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
